--- a/downloads/shoko-desktop/index.html
+++ b/downloads/shoko-desktop/index.html
@@ -13,7 +13,7 @@ Educate Me Sensei We designed Shoko Desktop to be easy to use while still provid
 <span class=breadcrumb-separator>/</span>
 <a href=/downloads>Downloads</a>
 <span class=breadcrumb-separator>/</span>
-<span class=breadcrumb-active>Shoko desktop</span></div></div></div></div><div class="section-wrapper row"><div class="col-xxl-3 col-xl-3 col-lg-3 page-left-section-wrapper"><div class=downloads-single-link-list><p class=page-item-header>Details</p><hr><span class=downloads-single-item>Version 4.0.0</span>
+<span class=breadcrumb-active>Shoko Desktop</span></div></div></div></div><div class="section-wrapper row"><div class="col-xxl-3 col-xl-3 col-lg-3 page-left-section-wrapper"><div class=downloads-single-link-list><p class=page-item-header>Details</p><hr><span class=downloads-single-item>Version 4.0.0</span>
 <span class=downloads-single-item></span><span class=downloads-single-item>August 21, 2020</span>
 <span class=downloads-single-item>Windows</span></div><div class=downloads-single-link-list><p class=page-item-header>Resources</p><hr><a class=downloads-single-item-link href=https://github.com/ShokoAnime/ShokoDesktop>Github</a>
 <a class=downloads-single-item-link href=https://docs.shokoanime.com/>Documentation</a>
