--- a/downloads/shoko-metadata/index.html
+++ b/downloads/shoko-metadata/index.html
@@ -11,8 +11,8 @@
 <span class=breadcrumb-separator>/</span>
 <a href=/downloads>Downloads</a>
 <span class=breadcrumb-separator>/</span>
-<span class=breadcrumb-active>Shoko Metadata</span></div></div></div></div><div class="section-wrapper row"><div class="col-xxl-3 col-xl-3 col-lg-3 page-left-section-wrapper"><div class=downloads-single-link-list><p class=page-item-header>Details</p><hr><span class=downloads-single-item>Version 1.4.2</span>
-<span class=downloads-single-item></span><span class=downloads-single-item>July 31st, 2019</span>
+<span class=breadcrumb-active>Shoko Metadata</span></div></div></div></div><div class="section-wrapper row"><div class="col-xxl-3 col-xl-3 col-lg-3 page-left-section-wrapper"><div class=downloads-single-link-list><p class=page-item-header>Details</p><hr><span class=downloads-single-item>Version 1.5.0</span>
+<span class=downloads-single-item></span><span class=downloads-single-item>August 29th, 2020</span>
 <span class=downloads-single-item>Plex</span></div><div class=downloads-single-link-list><p class=page-item-header>Resources</p><hr><a class=downloads-single-item-link href=https://github.com/Cazzar/ShokoMetadata.bundle>Github</a>
 <a class=downloads-single-item-link href=https://docs.shokoanime.com/>Documentation</a>
 <a class=downloads-single-item-link href=https://docs.shokoanime.com/changelog/>Changelog</a>
